PG-403: Mailing list checkbox header alignment fixed

--- a/sites/all/themes/tpg_theme/sass/components/page-elements/_webform-client-form.scss
+++ b/sites/all/themes/tpg_theme/sass/components/page-elements/_webform-client-form.scss
@@ -60,7 +60,6 @@ article .webform-client-form {
   }
 
   .form-checkboxes {
-    float: left;
     margin-left: 10px;
     margin-right: 10px;
     width: 50%;
